# crypto-quote-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build_docker_image.sh
.github/workflows/: build.yml
gcloud/run/: api.yaml
src/: cache.rs  erc20.json  lib.rs  main.rs  quote.rs  wallet.rs
