[package]
name = "crypto-quote-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.5"
tokio = { version = "1", features = ["full"] }
url = "2.0"
reqwest = { version = "0.11", features = ["json"] }
terra-rust-api = "1.1.8"
