[package]
name = "crypto-quote-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.19"
serde = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.5"
tokio = { version = "1", features = ["full"] }
url = "2.0"
reqwest = { version = "0.11", features = ["json"] }
terra-rust-api = "1.1.8"
rocket = "0.5.0-rc.1"
futures = "0.3"
web3 = "0.17.0"
dotenv = "0.15.0"
ethcontract = "0.15.4"
ethcontract-common = "0.15.4"
ethabi = "16.0.0"
ctor = "0.1.21"
